--- a/_includes/about.html
+++ b/_includes/about.html
@@ -8,7 +8,12 @@
                 </div>
             </div>
             <div class="row">
-                  <p>For all my life, I have strived to go beyond the distance, by challenging myself. I've remained open-minded throughout my life in order to see the world from different viewpoints. But I never forget to build the foundation of my entrepreneurial career constantly.</p>
+                <div class="col-lg-4 col-lg-offset-2">
+                    <p>For all my life, I have strived to go beyond the distance, by challenging myself. I've remained open-minded throughout my life in order to see the world from different viewpoints. But I never forget to build the foundation of my entrepreneurial career constantly.</p>
+                </div>
+                <div class="col-lg-4">
+                    <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point! </p>
+                </div>
             </div>
         </div>
     </section>
