--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -18,8 +18,8 @@
                             <p>{{ post.description }}</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
-                                    <strong><a href="http://startbootstrap.com">{{ post.client }}</a>
-                                    </strong>
+                                    <strong{{ post.skill }}
+                                  </strong>
                                 </li>
                                 <li>Date:
                                     <strong><a href="http://startbootstrap.com">{{ post.project-date }}</a>
