--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -18,7 +18,7 @@
                             <p>{{ post.description }}</p>
                             <ul class="list-inline item-details">
                                 <li>Client:
-                                    <strong{{ post.skill }}
+                                    <strong>{{ post.skill }}
                                   </strong>
                                 </li>
                                 <li>Date:
